Fix z-index
fix #80

--- a/assets/sass/variables.scss
+++ b/assets/sass/variables.scss
@@ -31,13 +31,15 @@ $wide-margin: $size-column * 2 + $size-gap * 2;
 $z-index-gallery: 1;
 $z-index-btn: 2;
 $z-index-counter: 3;
+
+$z-index-page-menu: 12;
+$z-index-page-menu-list: 12;
+$z-index-page-menu-trigger: 13;
+$z-index-page-search: 12;
+$z-index-page-search-trigger: 13;
 $z-index-search-input: 999;
 $z-index-search-results: 999;
-$z-index-page-menu: 2;
-$z-index-page-menu-list: 2;
-$z-index-page-menu-trigger: 3;
-$z-index-page-search: 2;
-$z-index-page-search-trigger: 3;
+
 $z-index-header-items: 1;
 $z-index-header-items-after: 0;
 $z-index-about-header: 0;
